# faithful

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  config.example.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/plans/: 2026-03-01-refactor-design.md  2026-03-01-refactor-plan.md
docs/superpowers/plans/: 2026-04-25-pypi-and-ux-implementation.md
docs/superpowers/specs/: 2026-04-25-pypi-and-ux-design.md
faithful/: __init__.py  __main__.py  bot.py  chunker.py  cli.py  config.py  doctor.py  errors.py  memory.py  paths.py  prompt.py  store.py  tools.py  verbs.py  wizard.py
faithful/backends/: __init__.py  anthropic.py  anthropic_backend.py  base.py  gemini.py  gemini_backend.py  llm.py  markov.py  ollama.py  ollama_backend.py  openai.py  openai_backend.py  openai_compat.py  openai_compat_backend.py
faithful/cogs/: __init__.py  admin.py  chat.py  onboarding.py  scheduler.py
faithful/tools/: __init__.py  definitions.py  executor.py  memory.py
faithy/: __init__.py  __main__.py  bot.py  config.py  store.py
faithy/backends/: __init__.py  base.py  llm.py  markov.py  ollama_backend.py  openai_backend.py
faithy/cogs/: __init__.py  admin.py  chat.py  scheduler.py
tests/: test_backends_init.py  test_base_backend.py  test_chat_empty_state.py  test_chunker.py  test_cli.py  test_config.py  test_doctor.py  test_errors.py  test_onboarding.py  test_paths.py  test_prompt.py  test_session.py  test_store.py  test_tools.py  test_verbs_info.py  test_verbs_run.py  test_wizard.py  verify_logic.py  verify_run.py
