[project]
name = "faithful"
version = "1.0.0"
description = "A Discord chatbot that emulates the tone and typing style of provided example messages."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["discord", "discord-bot", "llm", "chatbot", "persona"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "discord.py>=2.3",
    "tomli>=2.0; python_version < '3.11'",
    "duckduckgo-search>=7.0",
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
openai = ["openai>=1.68"]
gemini = ["google-genai>=1.0"]
anthropic = ["anthropic>=0.40"]
all = [
    "openai>=1.68",
    "google-genai>=1.0",
    "anthropic>=0.40",
]
dev = [
    "openai>=1.68",
    "google-genai>=1.0",
    "anthropic>=0.40",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
faithful = "faithful.cli:main"

[project.urls]
Homepage = "https://github.com/a9lim/faithful"
Repository = "https://github.com/a9lim/faithful"
Issues = "https://github.com/a9lim/faithful/issues"

[tool.setuptools.packages.find]
include = ["faithful*"]
